k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logistic-system
  labels:
    app: logistic-control-simulation
    environment: production
    version: v1.0.0
